# ros2_galactic_waveshare_adc

./: CMakeLists.txt  CMakeLists2.txt  package.xml
.externalToolBuilders/: colcon.launch
include/: ADS1256.h  DEV_Config.h
src/: ros2_galactic_waveshare_adc_node.cpp
